update final do projeto

--- a/servicos.html
+++ b/servicos.html
@@ -25,7 +25,7 @@
     <link href="./LaPea Pesquisa Lab_files/style.css" rel="stylesheet">
     <script src="./LaPea Pesquisa Lab_files/analytics.js.baixados"></script><script src="./LaPea Pesquisa Lab_files/modernizr-2.8.3.min.js.baixados"></script>
 </head>
-<body style="background-color: #fcf8e3" class="auth-theme-rashmore roboto-condensed-font">
+<body class="auth-theme-rashmore roboto-condensed-font">
     <header class="sabbi-site-head">
         <!-- .navbar -->
         <nav style="margin: auto;" class="navbar navbar-kawsa dark-green-background" role="navigation"> 
@@ -145,64 +145,6 @@
 
                 </div>
             </section><!-- /.icon-card-segment -->
-        </div>
-        <div style="width: 80%;" class="container">
-            <div class="row container-contact">
-                <div class="col-sm-12">
-                    <div class="card-primary card-contact shadow-border">
-                        <div class="card-body">
-                            <h3 class="text-center">Para solicitar serviço preencha os formulários abaixo ou entre em contato conosco.</h3>
-                            <form action="#" method="post">
-                                <div class="form-group">
-                                    <label for="nome">Nome:</label>
-                                    <input name="nome" type="text" id="nome" class="form-control" placeholder="Por favor, digite seu nome" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="Input-inst">E-mail:</label>
-                                    <input name="email" type="text" id="email" class="form-control" placeholder="Por favor, digite seu e-mail" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="Input-inst">Instituição:</label>
-                                    <input name="instituicao" type="text" id="instituicao" class="form-control" placeholder="Por favor, digite sua instituição" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="Inputphone">Contato:</label>
-                                    <input name="contato" type="tel" id="contato" class="form-control" placeholder="Por favor, digite seu número de telefone" required>
-                                </div>
-                                <div class="form-group">
-                                    <div class="offcanvas-body">
-                                        <label for="select">Tipo de Serviço:</label>
-                                            <div class="form-floating">
-                                                <select style="color: black;" name="tservico" type="servico" id="tservico" class="form-select" required>
-                                                    <option>Desenvolvimento de sistemas</option>
-                                                    <option>Implantação de redes cabeadas e Wi-Fi</option>
-                                                    <option>Projetos de redes FTTH</option>
-                                                    <option>Impressão 3D</option>
-                                                    <option>Criação de soluções com Arduino</option>
-                                                    <option>Treinamentos em cloud service, IA, Redes de Computadores/Datacom e 5G</option>
-                                                    <option>Prototipagem de placas de circuito impresso</option>
-                                                </select>
-                                            </div>
-                                    </div>
-                                <div class="form-group">
-                                    <label for="InputMessage">Descrição</label>
-                                    <textarea name="descricao" class="form-control" rows="10" placeholder="Digite sua mensagem" style="resize: vertical;"></textarea>
-                                </div>
-                                <div class="form-group">
-                                    <div id="form_success"></div>
-                                    <div id="form_errors"></div>
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <button type="submit" class="btn btn-primary btn-block">Enviar mensagem</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                </div>
-            </div>
         </div>
     </main>
 
